Add blue bg variable

--- a/frontend/src/styles/config.scss
+++ b/frontend/src/styles/config.scss
@@ -4,6 +4,7 @@
     padding: 0;
     --primary-color: #F9E8F8;
     --secondary-color: #EFEEEE;
+    --bg-blue-color: #2854bd;
     --main-font-family: 'Courier New', Courier, monospace;
     --pixel-box-shadow: -8px 0 0 0 #646363,
                         8px 0 0 0 #646363,
