--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,5 +1,5 @@
-@import './config.scss';
-@import './deck';
-@import './filtres';
-@import './intro';
-@import './header'; 
+@import "./config.scss";
+@import "./deck";
+@import "./filtres";
+@import "./intro";
+@import "./header";
