--- a/frontend/src/styles/_deck.scss
+++ b/frontend/src/styles/_deck.scss
@@ -1,12 +1,25 @@
 $border-color: #646363;
 
 .Deck {
+  overflow-y: scroll;
   width: 70%;
   height: 75vh;
   position: fixed;
   right: 5%;
   bottom: 5%;
-  box-shadow: -10px 0 0 0 $border-color, 10px 0 0 0 $border-color, 0 -10px 0 0 $border-color,
-    0 10px 0 0 $border-color;
-    background-color:#EFEEEE ;
+  box-shadow: -10px 0 0 0 $border-color, 10px 0 0 0 $border-color,
+    0 -10px 0 0 $border-color, 0 10px 0 0 $border-color;
+  background-color: #efeeee;
+  
+  &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      }
+  &::-webkit-scrollbar-thumb{
+        border-radius: 0px;
+  }
+}
+
+.deckList {
+  height: auto;
+ 
 }
