--- a/frontend/src/styles/config.scss
+++ b/frontend/src/styles/config.scss
@@ -2,8 +2,10 @@ $primary-color: #f9e8f8;
 $secondary-color: #efeeee;
 $bg-blue-color: #2854bd;
 $main-font-family: "Courier New", Courier, monospace;
-$pixel-box-shadow: -8px 0 0 0 #646363, 8px 0 0 0 #646363, 0 -8px 0 0 #646363,
-  0 8px 0 0 #646363;
+$pixel-box-shadow: -6px 0 0 0 #646363, 
+                  6px 0 0 0 #646363, 0 
+                  -6px 0 0 #646363,
+                  0 6px 0 0 #646363;
   
 * {
   box-sizing: border-box;
