modifs bg+fix syntax header+ coeurs+App

--- a/frontend/src/styles/config.scss
+++ b/frontend/src/styles/config.scss
@@ -10,6 +10,6 @@ $pixel-box-shadow: -8px 0 0 0 #646363, 8px 0 0 0 #646363, 0 -8px 0 0 #646363,
   margin: 0;
   padding: 0;
 }
-
-
-
+body{
+background-color: #f9e8f8;
+}
