--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -4,7 +4,7 @@
   height: 100px;
   align-items: center;
   justify-content: space-between;
-  background-color: #f9e8f8;
+  background-color: $primary-color;
 
   #gif {
     display: flex;
