--- a/frontend/src/styles/_deck.scss
+++ b/frontend/src/styles/_deck.scss
@@ -1,4 +1,4 @@
-$border-color: #646363;
+@import "./config.scss";
 
 .Deck {
   overflow-y: scroll;
@@ -9,7 +9,7 @@ $border-color: #646363;
   bottom: 5%;
   box-shadow: -10px 0 0 0 $border-color, 10px 0 0 0 $border-color,
     0 -10px 0 0 $border-color, 0 10px 0 0 $border-color;
-  background-color: #efeeee;
+  background-color: $secondary-color;
   
   &::-webkit-scrollbar-track {
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
