--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -1,8 +1,21 @@
 .DeckList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     img {
-        
-        width: 20rem;
-        padding: 5px;
+        width: 10rem;
+        padding: 10px;
+        margin: 1rem;
+        transition: transform .2;
+        &:hover {
+
+            transform: scale(1.1);
+
+        }
+        &:active {
+            transform: scale(1.2)
+        }
     }
+   
 
 }
