--- a/frontend/src/styles/_searchbar.scss
+++ b/frontend/src/styles/_searchbar.scss
@@ -5,7 +5,7 @@ $border-color: #646363;
   width: 100%;
   font-family: "Courier New", Courier, monospace;
   input {
-    
+    overflow: hidden;
     padding: 8px;
     width: 50%;
     display: block;
