--- a/frontend/src/styles/_intro.scss
+++ b/frontend/src/styles/_intro.scss
@@ -1,18 +1,31 @@
 #intro-filtres-box {
   background-color: $primary-color;
-  max-width: 300px;
+  max-width: 20%;
+  height: 75vh;
+  position: fixed;
+  left: 2%;
+  top: 16%;
+  display: flex;
+  flex-direction: column;
+  gap: 5%;
 
   .intro-box {
-    margin: 20px 10% 20px 10%;
+    margin: 0px 10% 20px 10%;
+    position: relative;
+    top: 5%;
     max-width: 80%;
     padding: 5px;
+    padding-bottom: 50px;
     box-shadow: $pixel-box-shadow;
     font-family: $main-font-family;
     background-color: $secondary-color;
+    font-size: 14px;
 
     .intro-title {
       font-weight: normal;
+      font-size: 24px;
     }
+
     .intro-bold-words {
       font-weight: bold;
     }
