--- a/frontend/src/styles/config.scss
+++ b/frontend/src/styles/config.scss
@@ -2,16 +2,15 @@ $primary-color: #f9e8f8;
 $secondary-color: #efeeee;
 $bg-blue-color: #2854bd;
 $main-font-family: "Courier New", Courier, monospace;
-$pixel-box-shadow: -6px 0 0 0 #646363, 
-                  6px 0 0 0 #646363, 0 
-                  -6px 0 0 #646363,
-                  0 6px 0 0 #646363;
-  
+$pixel-box-shadow: -6px 0 0 0 #646363, 6px 0 0 0 #646363, 0 -6px 0 0 #646363,
+  0 6px 0 0 #646363;
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-
-
+body {
+  background-color: #f9e8f8;
+}
