--- a/frontend/src/styles/_searchbar.scss
+++ b/frontend/src/styles/_searchbar.scss
@@ -13,6 +13,10 @@ $border-color: #646363;
     border-style: none;
     box-shadow: -3px 0 0 0 $border-color, 3px 0 0 0 $border-color,
       0 -3px 0 0 $border-color, 0 3px 0 0 $border-color;
+    
+    &:focus {
+      outline: none;
+    }
   }
 
   input[type="text"] {
