--- a/frontend/src/styles/config.scss
+++ b/frontend/src/styles/config.scss
@@ -12,6 +12,7 @@ $pixel-box-searchbar: -3px 0 0 0 $border-color, 3px 0 0 0 $border-color, 0 -3px 
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 body{
 background-color: #f9e8f8;
