alignement des boites grises sur les bords extérieurs

--- a/frontend/src/styles/_deck.scss
+++ b/frontend/src/styles/_deck.scss
@@ -3,8 +3,7 @@ $border-color: #646363;
 .Deck {
   overflow-y: scroll;
   width: 70%;
-  height: 75vh;
-  position: fixed;
+  // height: 75vh;
   right: 5%;
   bottom: 5%;
   box-shadow: -10px 0 0 0 $border-color, 10px 0 0 0 $border-color,
