--- a/frontend/src/styles/_intro.scss
+++ b/frontend/src/styles/_intro.scss
@@ -1,18 +1,19 @@
 #intro-filtres-box {
   background-color: $primary-color;
   max-width: 20%;
-  height: 75vh;
-  position: fixed;
+  // height: 75vh;
+  // position: fixed;
   left: 2%;
-  top: 16%;
+  // top: 16%;
   display: flex;
   flex-direction: column;
-  gap: 5%;
+  justify-content: space-between;
+  // gap: 5%;
 
   .intro-box {
     margin: 0px 10% 20px 10%;
     position: relative;
-    top: 5%;
+    // top: 5%;
     max-width: 80%;
     padding: 10px;
     padding-bottom: 50px;
