--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -16,6 +16,8 @@
         &:active {
             transform: scale(1.2)
         }
+
+       
     }
    
 
@@ -26,3 +28,6 @@
     padding: 5px;
   }
 
+  button {
+    border: none;
+}
