--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -9,12 +9,25 @@
   #gif {
     display: flex;
     margin-left: 50px;
-    height: 80px;
-    width: 120px;
+
   }
+
+  #pika {
+
+    margin-left: 50px;
+  width: 10rem;
+
+}
+
+  #logo {
+    width: 20%;
+  }
+
+
 
   #pokeball {
     margin-right: 50px;
-    width: 8rem;
+    width: 5rem;
+ 
   }
 }
