--- a/frontend/src/styles/_cards.scss
+++ b/frontend/src/styles/_cards.scss
@@ -3,7 +3,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
 
 .Card {
@@ -15,7 +14,7 @@
   background-color: lightgrey;
   border: 5px solid yellow;
   border-radius: 15px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .Name-Hp {
