--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -1,11 +1,13 @@
 .DeckList {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+
   img {
-    width: 10rem;
-    padding: 10px;
-    margin: 1rem;
+    max-width: 8rem;
+    max-height: 8rem;
+    
     transition: transform 0.2;
     &:hover {
       transform: scale(1.1);
@@ -18,7 +20,6 @@
 
 img {
   width: 20rem;
-  padding: 5px;
 }
 
 button {
