--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
 
   img {
-    max-width: 8rem;
+    max-width: 10rem;
     max-height: 8rem;
     
     transition: transform 0.2;
@@ -15,6 +15,9 @@
     &:active {
       transform: scale(1.2);
     }
+  }
+  p {
+    margin-bottom: 2rem;
   }
 }
 
