--- a/frontend/src/styles/_searchbar.scss
+++ b/frontend/src/styles/_searchbar.scss
@@ -3,6 +3,7 @@ $border-color: #646363;
 .SearchBar {
   width: 100%;
   font-family: "Courier New", Courier, monospace;
+  margin-bottom: 3rem;
   input {
     overflow: hidden;
 
