--- a/frontend/src/styles/_cards.scss
+++ b/frontend/src/styles/_cards.scss
@@ -3,6 +3,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .Card {
@@ -27,13 +30,16 @@
 
 .Image {
   display: flex;
+  align-items: center;
   background-color: white;
   width: 90%;
+  height: 200px;
   justify-content: center;
   border: 5px solid yellow;
 
   img {
-    width: 200px;
+    width: 100%;
+    height: 100%;
   }
 }
 
@@ -53,6 +59,14 @@
   width: 80%;
   height: 50px;
   border-bottom: 2px solid black;
+}
+
+.Weight {
+  flex-wrap: wrap;
+}
+
+.Height {
+  flex-wrap: wrap;
 }
 
 .Abilities {
