--- a/frontend/src/styles/_deck.scss
+++ b/frontend/src/styles/_deck.scss
@@ -1,7 +1,7 @@
 @import "./config.scss";
 
 .Deck {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   overflow-y: scroll;
   width: 70%;
@@ -25,8 +25,7 @@
 }
 
 .pokemonList {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
