--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -1,19 +1,20 @@
 #header {
   display: flex;
   width: 100%;
-  height: 150px;
+  max-height: 150px;
+  min-height: 80px;
   align-items: center;
   justify-content: space-between;
   background-color: $primary-color;
 
-  #gif {
-    display: flex;
-    margin-left: 50px;
-  }
+  // #gif {
+  //   display: flex;
+  //   margin-left: 50px;
+  // }
 
   #pika {
     margin-left: 50px;
-    width: 10rem;
+    width: 10Rem;
   }
 
   #logo {
@@ -23,5 +24,28 @@
   #pokeball {
     margin-right: 50px;
     width: 5rem;
+  }
+  
+  
+  @media screen and (max-width:360px) {
+   
+    #header {
+      justify-content: center;
+    }
+
+    #pika{
+      width: 4.5Rem;
+      margin-left: 10px;
+    }
+    #pokeball {
+      margin-right: 15px;
+      width: 2.6rem;
+    }
+    
+  #logo {
+    width: 45%;
+    margin-right:15px;
+  }
+
   }
 }
