--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./config.scss";
 @import "./deck";
 @import "./filtres";
+@import "./filtreType";
 @import "./intro";
 @import "./header";
 @import "./decklist";
