--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -14,7 +14,7 @@
 
   #pika {
     margin-left: 50px;
-    width: 10Rem;
+    width: 10rem;
   }
 
   #logo {
@@ -25,27 +25,24 @@
     margin-right: 50px;
     width: 5rem;
   }
-  
-  
-  @media screen and (max-width:360px) {
-   
+
+  @media screen and (max-width: 360px) {
     #header {
       justify-content: center;
     }
 
-    #pika{
-      width: 4.5Rem;
+    #pika {
+      width: 4.5rem;
       margin-left: 10px;
     }
     #pokeball {
       margin-right: 15px;
       width: 2.6rem;
     }
-    
-  #logo {
-    width: 45%;
-    margin-right:15px;
-  }
 
+    #logo {
+      width: 45%;
+      margin-right: 15px;
+    }
   }
 }
