refonte de la taille de carte

--- a/frontend/src/styles/_cards.scss
+++ b/frontend/src/styles/_cards.scss
@@ -25,7 +25,7 @@
 }
 
 .Card {
-  width: 500px;
+  width: 25%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -70,7 +70,7 @@
   background-size: auto 10px;
   background-repeat: repeat-y;
   width: 90%;
-  height: 300px;
+  height: 250px;
   justify-content: center;
   border: 5px solid yellow;
   box-shadow: 5px 5px 5px grey;
