responsivness deck ok

--- a/frontend/src/styles/_app.scss
+++ b/frontend/src/styles/_app.scss
@@ -2,6 +2,13 @@
   display: flex;
   justify-content: space-around;
   margin: 20px;
+  max-height: 80vh;
+}
 
-  min-height: 80vh;
+@media screen and (max-width: 768px) {
+  #main-section{
+    margin: 10px;
+    justify-content: center;
+
+  }
 }
