--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -1,34 +1,44 @@
-.DeckList {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
+.poke-container {
+  width: 10rem;
+  height: 10rem;
+  margin-bottom: 1rem;
+}
 
-  .poke-container {
-    width: 10rem;
-    height: 10rem;
-    margin-bottom: 1rem;
-  }
+.img-button {
+  width: 7rem;
+  max-height: 10rem;
+  margin: 0 auto;
 
-  .img-button {
-    width: 80%;
-    max-height: 10rem;
-    margin: 0 auto;
-
-    transition: transform 0.2;
-    &:hover {
-      transform: scale(1.1);
-    }
-    &:active {
-      transform: scale(1.2);
-    }
+  transition: transform 0.2;
+  &:hover {
+    transform: scale(1.1);
   }
-  .pokeName {
-    margin-bottom: 2rem;
+  &:active {
+    transform: scale(1.2);
   }
+}
+.pokeName {
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 button {
   background: transparent;
   border: none;
+}
+
+@media screen and (max-width: 820px) {
+  .img-button {
+    width: 7rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .img-button {
+    width: 5rem;
+  }
+  .poke-container {
+    width: 7rem;
+    margin: 0 1rem;
+  }
 }
