--- a/frontend/src/styles/_deck.scss
+++ b/frontend/src/styles/_deck.scss
@@ -27,6 +27,15 @@
 .pokemonList {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  
   justify-content: center;
+}
+
+@media screen and (max-width: 820px) {
+  .Deck {
+   margin: 0 auto;
+   width: 90%;
+   padding: 0;
+   height: 80vh;
+  }
 }
