--- a/frontend/src/styles/_filtres.scss
+++ b/frontend/src/styles/_filtres.scss
@@ -2,9 +2,11 @@
   font-family: $main-font-family;
   background-color: $secondary-color;
   box-shadow: $pixel-box-shadow;
-  max-width: 80%;
-  margin: 10px 10% 10px 10%;
-  padding: 20px;
+  overflow-y: scroll;
+  max-height: 32vh;
+  margin-top: 1rem;
+  padding: 0 1rem;
+  bottom: 5%;
 
   .filtres-title {
     text-align: center;
@@ -20,4 +22,11 @@
   padding: 5px;
   box-shadow: -2px 0 0 0 $border-color, 2px 0 0 0 $border-color,
     0 -2px 0 0 $border-color, 0 2px 0 0 $border-color;
+}
+
+@media screen and (max-width: 820px) {
+  .filtres-box {
+    display: none;
+
+  }
 }
