--- a/frontend/src/styles/_searchbar.scss
+++ b/frontend/src/styles/_searchbar.scss
@@ -5,8 +5,6 @@ $border-color: #646363;
   font-family: "Courier New", Courier, monospace;
   margin-bottom: 3rem;
   input {
-    overflow: hidden;
-
     padding: 8px;
     width: 50%;
     display: block;
@@ -30,4 +28,12 @@ $border-color: #646363;
     text-align: center;
     font-size: 20px;
   }
+}
+
+@media screen and (max-width: 820px) {
+  .SearchBar input {
+    width: 80%;
+   
+  }
+  
 }
