--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -47,7 +47,11 @@
   }
 
   .speaker-button {
-    width: 2rem;
+    position: absolute;
+    left: 30%;
+    top: 14%;
+    .speaker-img {
+      width: 1.5rem;
+    }
   }
-
 }
