--- a/frontend/src/styles/_intro.scss
+++ b/frontend/src/styles/_intro.scss
@@ -13,6 +13,7 @@
     background-color: $secondary-color;
     font-size: clamp(0.8rem, 1vw, 1rem);
     line-height: 1.5;
+    margin-bottom: 1rem;
 
     .intro-title {
       font-weight: normal;
