--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -27,6 +27,25 @@ button {
   border: none;
 }
 
+.isFavorite {
+  width: 30px;
+  height: 30px;
+  background-image: url("../assets/images/coeur-rouge.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  align-self: flex-end;
+  float: right;
+}
+
+.notFavorite {
+  width: 30px;
+  height: 30px;
+  background-image: url("../assets/images/coeur-transparent.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  float: right;
+}
+
 @media screen and (max-width: 820px) {
   .img-button {
     width: 7rem;
