--- a/frontend/src/styles/_deck.scss
+++ b/frontend/src/styles/_deck.scss
@@ -27,8 +27,16 @@
 .pokemonList {
   display: flex;
   flex-wrap: wrap;
-
   justify-content: center;
+}
+
+.compareDeck {
+  height: 50vh;
+  width: 90%;
+}
+
+.comparePokemonList {
+  width: 95%;
 }
 
 @media screen and (max-width: 820px) {
