--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -8,3 +8,13 @@
 @import "./cards";
 @import "./landingPage";
 @import "./slideFilters";
+@import "./MyDeck/myDeckContainer";
+@import "./MyDeck/myDeck";
+@import "./MyDeck/introMyDeck";
+@import "./MyDeck/favCard";
+
+* {
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Courier New', Courier, monospace;
+}
