css commit on playlist

--- a/frontend/src/styles/_filtres.scss
+++ b/frontend/src/styles/_filtres.scss
@@ -5,7 +5,7 @@
   max-height: 32vh;
   margin-top: 1rem;
   padding: 0 1rem;
-  bottom: 5%;
+  padding-bottom: 1rem;
 
   .filtres-title {
     text-align: center;
