--- a/frontend/src/styles/_slideFilters.scss
+++ b/frontend/src/styles/_slideFilters.scss
@@ -10,7 +10,6 @@
   top: 0;
   left: 0;
   transition: transform 0.5s cubic-bezier(0, 0.52, 0, 1);
-  overflow: scroll;
   z-index: 2;
   display: none;
 }
@@ -62,13 +61,19 @@
   .slide-filtres-title {
     padding-top: 5vh;
   }
+  .landscape-gif-box {
+    display: initial;
+    top: 40vh;
+    left: 10%;
+    width: 60%;
+    height: 29%;
+  }
 }
 
 .fav-box {
   width: 80%;
   display: flex;
   gap: 5%;
-  padding-bottom: 5vh;
 
   #fav-input {
     box-shadow: -2px 0 0 0 $border-color, 2px 0 0 0 $border-color,
