--- a/frontend/src/styles/_intro.scss
+++ b/frontend/src/styles/_intro.scss
@@ -1,9 +1,31 @@
+.landscape-gif-box, .filtres-box {
+  font-family: $main-font-family;
+  box-shadow: $pixel-box-shadow;
+  width: 100%;
+  max-height: 20vh;
+  margin-top: 1rem;
+}
+
 #intro-filtres-box {
   background-color: $primary-color;
   max-width: 23%;
   left: 2%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+
+  .fl-pl-toggle-button {
+    background-color: $secondary-color;
+    box-shadow: -2px 0 0 0 $border-color, 2px 0 0 0 $border-color,
+    0 -2px 0 0 $border-color, 0 2px 0 0 $border-color;;
+    width: 40%;
+    text-align: center;
+    :hover {
+      transform: scale(1.1);
+      cursor: pointer;
+    }
+  }
 
   .intro-box {
     padding: 20px;
