--- a/frontend/src/styles/MyDeck/_myDeckContainer.scss
+++ b/frontend/src/styles/MyDeck/_myDeckContainer.scss
@@ -12,9 +12,14 @@
 }
 
 .favPokeList {
+  margin-top: -2rem;
+  justify-content: space-around;
+  row-gap: 5rem;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 1rem;
-  row-gap: 2rem;
+}
+
+.cardFav {
+  width: 300px;
+  height: 400px;
 }
