--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -14,7 +14,7 @@
 @import "./MyDeck/favCard";
 
 * {
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Courier New', Courier, monospace;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Courier New", Courier, monospace;
 }
