--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -57,6 +57,9 @@
     }
   }
 
+  .togglebutton {
+    display: none;
+  }
   @media screen and (max-width: 820px) {
     .speaker-button {
       left: 2%;
