Add background image for header. CSS final stage

--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -12,6 +12,7 @@
   transition: transform 0.2;
   &:hover {
     transform: scale(1.1);
+    cursor: pointer;
   }
   &:active {
     transform: scale(1.2);
@@ -44,6 +45,10 @@ button {
   background-repeat: no-repeat;
   background-size: 100%;
   float: right;
+}
+
+.isFavorite:hover, .notFavorite:hover {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 820px) {
