--- a/frontend/src/styles/_intro.scss
+++ b/frontend/src/styles/_intro.scss
@@ -2,7 +2,7 @@
   font-family: $main-font-family;
   box-shadow: $pixel-box-shadow;
   width: 100%;
-  max-height: 20vh;
+  max-height: 25vh;
   margin-top: 1rem;
 }
 
@@ -14,16 +14,23 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  font-family: $main-font-family;
 
-  .fl-pl-toggle-button {
+  .fl-pl-button-box {
     background-color: $secondary-color;
     box-shadow: -2px 0 0 0 $border-color, 2px 0 0 0 $border-color,
     0 -2px 0 0 $border-color, 0 2px 0 0 $border-color;;
     width: 40%;
+    padding: 5px 130px 5px 5px;
     text-align: center;
     :hover {
       transform: scale(1.1);
       cursor: pointer;
+    }
+    .fl-pl-button {
+      font-family: $main-font-family;
+      font-weight: bold;
+      font-size: clamp(0.8rem, 0.8vw, 1rem);
     }
   }
 
