Final commit for sprint 3

--- a/frontend/src/styles/_decklist.scss
+++ b/frontend/src/styles/_decklist.scss
@@ -47,7 +47,8 @@ button {
   float: right;
 }
 
-.isFavorite:hover, .notFavorite:hover {
+.isFavorite:hover,
+.notFavorite:hover {
   cursor: pointer;
 }
 
