--- a/frontend/src/styles/_landingPage.scss
+++ b/frontend/src/styles/_landingPage.scss
@@ -36,7 +36,18 @@
       width: 100%;
 
       .pokeball {
-        width: 15rem;
+        width: 10rem;
+        max-height: 10rem;
+        margin: 0 auto;
+        transition: transform 0.4;
+        animation:rotate (1080deg);
+
+        &:hover {
+          transform: scale(1.1);
+        }
+        &:active {
+          transition: transform 0.5s;
+        }
       }
     }
   }
