style route comparator

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -13,7 +13,8 @@
 @import "./MyDeck/myDeck";
 @import "./MyDeck/introMyDeck";
 @import "./MyDeck/favCard";
-@import "./comparator";
+@import "./Comparator/comparator";
+@import "./Comparator/introComparator";
 
 * {
   text-decoration: none;
