Functional pokeball Menu with routes for app, my deck and playlist

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -13,6 +13,7 @@
 @import "./MyDeck/myDeck";
 @import "./MyDeck/introMyDeck";
 @import "./MyDeck/favCard";
+@import "./burger";
 
 * {
   text-decoration: none;
