--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -25,6 +25,44 @@
   #pika {
     margin-left: 50px;
     width: 10rem;
+    position: relative;
+    animation: flip-translate 10s ease-in-out infinite;
+  }
+
+  @keyframes flip-translate {
+    0% {
+      transform: translateX(0px) rotateY(0deg);
+    }
+    25% {
+      transform: translateX(500px) rotateY(0deg);
+    }
+    50% {
+      transform: translateX(500px) rotateY(180deg);
+    }
+    75% {
+      transform: translateX(0px) rotateY(180deg);
+    }
+    100% {
+      transform: translateX(0px) rotateY(0deg);
+    }
+  }
+
+  @keyframes flip-translate2 {
+    0% {
+      transform: translateX(0px) rotateY(0deg);
+    }
+    25% {
+      transform: translateX(300px) rotateY(0deg);
+    }
+    50% {
+      transform: translateX(300px) rotateY(180deg);
+    }
+    75% {
+      transform: translateX(0px) rotateY(180deg);
+    }
+    100% {
+      transform: translateX(0px) rotateY(0deg);
+    }
   }
 
   #logo {
@@ -34,6 +72,12 @@
   #pokeball {
     margin-right: 50px;
     width: 5rem;
+  }
+
+  @media screen and (max-width: 1560px) {
+    #pika {
+      animation: flip-translate2 10s ease-in-out infinite;
+    }
   }
 
   @media screen and (max-width: 820px) {
