--- a/frontend/src/styles/_playlist.scss
+++ b/frontend/src/styles/_playlist.scss
@@ -25,24 +25,24 @@
   }
 }
 
-.landscape-gif-box {
+.playlist-box {
   box-shadow: $pixel-box-shadow;
   overflow: scroll;
-  height: 50vh;
+  height: 40vh;
   width: 60%;
   margin: auto;
+  background-color: $secondary-color;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 100% 50%;
   .audio-controls {
     width: 100%;
   }
 
   .playlists {
     height: 100%;
-    width: 30%;
-    background-color: #ffffff7d;
-    
+    width: 35%;
+    font-size: clamp(1rem, 1vw, 1.5rem);
   }
 
   .playlist {
@@ -50,9 +50,10 @@
     padding-left: 0.5rem;
     padding-top: 5px;
     line-height: 1.5;
+    background-color: #ffffff7d;
     .playlist-button {
       font-family: $main-font-family;
-      font-size: clamp(1rem, 1vw, 1.5rem);
+      font-size: clamp(1rem, 1vw, 3rem);
       font-weight: bold;
       color: rgb(0, 0, 0);
       text-shadow: 5px 5px 5px #7f7f7f;
@@ -67,5 +68,16 @@
 @media screen and (max-width: 820px) {
   .intro-playlist-box {
     display: none;
+  }
+  .playlist-box {
+    width: 90%;
+    background-size: cover;
+    background-position: 70% 50%;
+  }
+  .playlists {
+    min-width: 100%;
+  }
+  .playlist {
+    background-color: transparent;
   }
 }
