modif intro comparator

--- a/frontend/src/styles/MyDeck/_introMyDeck.scss
+++ b/frontend/src/styles/MyDeck/_introMyDeck.scss
@@ -2,7 +2,7 @@
 
 .IntroMyDeck {
   width: 23%;
-  height: 45vh;
+  height: 50%;
   padding: 20px;
   box-shadow: $pixel-box-shadow;
   font-family: $main-font-family;
