--- a/frontend/src/styles/_playlist.scss
+++ b/frontend/src/styles/_playlist.scss
@@ -1,47 +1,75 @@
 .playlist-page {
   background-color: $primary-color;
   display: flex;
+  padding-top: 30px;
 }
 
-.intro-playlist-box {
-  padding: 20px;
-  box-shadow: $pixel-box-shadow;
-  font-family: $main-font-family;
-  background-color: $secondary-color;
-  font-size: clamp(0.8rem, 1vw, 1rem);
-  line-height: 1.5;
-  max-width: 23%;
-  max-height: 30vh;
-  margin-left: 5%;
-
-  .intro-playlist-title {
-    font-weight: bold;
-    font-size: clamp(1.2rem, 2vw, 2rem);
-    line-height: 1;
+.left-container {
+  display: flex;
+  width: auto;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  .intro-playlist-box {
+    padding: 20px;
+    box-shadow: $pixel-box-shadow;
+    font-family: $main-font-family;
+    background-color: $secondary-color;
+    font-size: clamp(0.8rem, 1vw, 1rem);
+    line-height: 1.5;
+    max-width: 100%;
+    max-height: 30vh;
+    margin-left: 5%;
+  
+    .intro-playlist-title {
+      font-weight: bold;
+      font-size: clamp(1.2rem, 2vw, 2rem);
+      line-height: 1;
+    }
+  
+    .intro-bold-words {
+      font-weight: bold;
+    }
   }
+  
+  .vaporeon {
+    width: 18rem;
+    height: 18rem;
+  }
+}
 
-  .intro-bold-words {
-    font-weight: bold;
+
+
+.playlist-container {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  justify-content: space-around;
+  .audio-controls {
+    margin: 0 auto;
+    width: 50%;
   }
 }
 
 .playlist-box {
   box-shadow: $pixel-box-shadow;
   overflow: scroll;
-  height: 40vh;
+  max-height: 40vh;
   width: 60%;
   margin: auto;
   background-color: $secondary-color;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 100% 50%;
-  .audio-controls {
-    width: 100%;
+  .playlist-title {
+    background-color: #ffffff7d;
+    text-align: center;
   }
 
   .playlists {
     height: 100%;
-    width: 35%;
+    width: 45%;
     font-size: clamp(1rem, 1vw, 1.5rem);
   }
 
@@ -67,6 +95,9 @@
 
 @media screen and (max-width: 820px) {
   .intro-playlist-box {
+    display: none;
+  }
+  .vaporeon {
     display: none;
   }
   .playlist-box {
