--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -1,6 +1,6 @@
 .header-wallpaper {
   position: absolute;
-  z-index: -1;
+  z-index: -2;
   width: 100vw;
   height: 25vh;
   background-image: url(../assets/images/landscapeheader.jpg);
@@ -17,29 +17,24 @@
   justify-content: space-between;
   margin-bottom: 3rem;
 
-  // #gif {
-  //   display: flex;
-  //   margin-left: 50px;
-  // }
-
   #pika {
-    margin-left: 50px;
-    width: 10rem;
+    width: 10vw;
+    z-index:-1;
     position: relative;
-    animation: flip-translate 10s ease-in-out infinite;
+    animation: flip-translate 15s ease-in-out infinite;
   }
 
   @keyframes flip-translate {
     0% {
       transform: translateX(0px) rotateY(0deg);
     }
-    25% {
-      transform: translateX(500px) rotateY(0deg);
+    45% {
+      transform: translateX(90vw) rotateY(0deg);
     }
     50% {
-      transform: translateX(500px) rotateY(180deg);
+      transform: translateX(90vw) rotateY(180deg);
     }
-    75% {
+    95% {
       transform: translateX(0px) rotateY(180deg);
     }
     100% {
@@ -47,26 +42,10 @@
     }
   }
 
-  @keyframes flip-translate2 {
-    0% {
-      transform: translateX(0px) rotateY(0deg);
-    }
-    25% {
-      transform: translateX(300px) rotateY(0deg);
-    }
-    50% {
-      transform: translateX(300px) rotateY(180deg);
-    }
-    75% {
-      transform: translateX(0px) rotateY(180deg);
-    }
-    100% {
-      transform: translateX(0px) rotateY(0deg);
-    }
-  }
 
   #logo {
     width: 20%;
+    min-height: 90px;
   }
 
   #pokeball {
@@ -74,11 +53,6 @@
     width: 5rem;
   }
 
-  @media screen and (max-width: 1560px) {
-    #pika {
-      animation: flip-translate2 10s ease-in-out infinite;
-    }
-  }
 
   @media screen and (max-width: 820px) {
     #header {
@@ -86,9 +60,9 @@
     }
 
     #pika {
-      width: 4.5rem;
+      width: 6rem;
       margin-left: 10px;
-      display: none;
+      animation :none;
     }
     #pokeball {
       margin-right: 15px;
