--- a/frontend/src/styles/Comparator/_searchSelector.scss
+++ b/frontend/src/styles/Comparator/_searchSelector.scss
@@ -12,3 +12,11 @@
   box-sizing: border-box;
   margin: 20px 20px 20px 0px;
 }
+
+
+@media screen and (max-width: 820px) {
+    .holders {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
