Poke46 style comparator et couleur de comparaison

--- a/frontend/src/styles/Comparator/_searchSelector.scss
+++ b/frontend/src/styles/Comparator/_searchSelector.scss
@@ -1,17 +1,23 @@
 @import "../config.scss";
 
 .holders {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50px;
 
-}
-
-.select-search {
+  .select-search {
     width: 250px;
     position: relative;
     font-family: "Nunito Sans", sans-serif;
     box-sizing: border-box;
     margin: 20px 20px 20px 0px;
   }
-  
-  
+
+  .comparebtn {
+    width: 150px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: rgb(119, 255, 119);
+  }
+}
