--- a/frontend/src/styles/Comparator/_searchSelector.scss
+++ b/frontend/src/styles/Comparator/_searchSelector.scss
@@ -22,25 +22,20 @@
   }
 }
 
-}
-
 .select-search {
   width: 250px;
   position: relative;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   box-sizing: border-box;
   margin: 20px 20px 20px 0px;
   padding: 5px;
   box-shadow: -2px 0 0 0 $border-color, 2px 0 0 0 $border-color,
     0 -2px 0 0 $border-color, 0 2px 0 0 $border-color;
-
 }
 
-
 @media screen and (max-width: 820px) {
-    .holders {
-      flex-direction: column;
-      align-items: center;
-    }
+  .holders {
+    flex-direction: column;
+    align-items: center;
   }
-
+}
