--- a/frontend/src/styles/_burger.scss
+++ b/frontend/src/styles/_burger.scss
@@ -15,11 +15,13 @@
   display: flex;
   flex-direction: column;
 
+}
+
   .pokeball-menu-top,
   .pokeball-menu-bottom {
     width: 6rem;
     height: 3rem;
-
+  }
 .burger-box {
   padding-right: 2%;
 }
