--- a/frontend/src/styles/Comparator/_searchSelector.scss
+++ b/frontend/src/styles/Comparator/_searchSelector.scss
@@ -35,7 +35,7 @@
 
 @media screen and (max-width: 820px) {
   .holders {
+    margin-top: 20%;
     flex-direction: column;
-    align-items: center;
   }
 }
