adjust bug on comparator button

--- a/frontend/src/styles/_playlist.scss
+++ b/frontend/src/styles/_playlist.scss
@@ -106,6 +106,7 @@
     width: 90%;
     background-size: cover;
     background-position: 70% 50%;
+    margin-left: 10%;
   }
   .playlists {
     min-width: 100%;
