--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -18,9 +18,10 @@
   margin-bottom: 3rem;
 
   #pika {
-    width: 10vw;
-    z-index:-1;
+    height: 18vh;
+    z-index: -1;
     position: relative;
+    margin-top:20px;
     animation: flip-translate 15s ease-in-out infinite;
   }
 
@@ -29,10 +30,10 @@
       transform: translateX(0px) rotateY(0deg);
     }
     45% {
-      transform: translateX(90vw) rotateY(0deg);
+      transform: translateX(88vw) rotateY(0deg);
     }
     50% {
-      transform: translateX(90vw) rotateY(180deg);
+      transform: translateX(88vw) rotateY(180deg);
     }
     95% {
       transform: translateX(0px) rotateY(180deg);
@@ -42,17 +43,17 @@
     }
   }
 
-
-  #logo {
-    width: 20%;
-    min-height: 90px;
-  }
-
   #pokeball {
     margin-right: 50px;
     width: 5rem;
   }
 
+  #logo {
+    margin: 20px auto;
+    width: 20%;
+    transform: translate(-50%);
+    min-width: 300px;
+  }
 
   @media screen and (max-width: 820px) {
     #header {
@@ -62,17 +63,21 @@
     #pika {
       width: 6rem;
       margin-left: 10px;
-      animation :none;
+      animation: none;
+      display: none;
     }
     #pokeball {
       margin-right: 15px;
       width: 2.6rem;
       display: none;
+      position: absolute;
     }
 
     #logo {
-      margin: 0 auto;
-      width: 35%;
+      margin: 20px auto;
+      width: 40%;
+      min-width: 160px;
+      transform: translate(0%);
     }
   }
   .togglebutton {
