--- a/frontend/src/styles/Comparator/_previewComparator.scss
+++ b/frontend/src/styles/Comparator/_previewComparator.scss
@@ -2,6 +2,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  font-size: clamp(0.8rem, 1vw, 1.2rem);
+
+
 
   .preview {
     width: 90%;
@@ -13,6 +16,7 @@
     .table1 {
       display: flex;
       width: 20%;
+      align-items: center;
     }
 
     .table2 {
@@ -44,8 +48,8 @@
     }
 
     .table-img {
-      width: 20%;
-      height: 150px;
+      width: 18%;
+
     }
 
     .sprites-comparator {
@@ -114,4 +118,21 @@
       text-align: center;
     }
   }
+}
+
+.grey {
+  color: #EFEEEE;
+}
+
+
+@media screen and (max-width: 820px) {
+  .preview {
+    margin-top: 20%;
+  }
+  .table-img {
+  
+    width: 20% !important;
+    
+  }
+
 }
