--- a/frontend/src/styles/Comparator/_searchSelector.scss
+++ b/frontend/src/styles/Comparator/_searchSelector.scss
@@ -5,14 +5,7 @@
   justify-content: space-around;
   align-items: center;
   height: 50px;
-
-  .select-search {
-    width: 250px;
-    position: relative;
-    font-family: "Nunito Sans", sans-serif;
-    box-sizing: border-box;
-    margin: 20px 20px 20px 0px;
-  }
+  margin-top: 3%;
 
   .comparebtn {
     width: 150px;
@@ -38,5 +31,14 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20%;
+  }
+  .select-search{
+    margin: 1rem;
+  }
+  .comparebtn {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
