bugfix pokeball size + anim pika

--- a/frontend/src/styles/_burger.scss
+++ b/frontend/src/styles/_burger.scss
@@ -76,4 +76,14 @@
     top: 100px;
     right: 10%;
   }
+
+  .burger-box-button {
+    display: flex;
+    flex-direction: column;
+  }
+  .pokeball-menu-top,
+  .pokeball-menu-bottom {
+    width: 4rem;
+    height: 2rem;
+  }
 }
