--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -21,25 +21,16 @@
     height: 18vh;
     z-index: -1;
     position: relative;
-    margin-top:20px;
-    animation: flip-translate 15s ease-in-out infinite;
+    margin-top: 20px;
+    animation: loop-infinite 6s linear infinite;
   }
 
-  @keyframes flip-translate {
+  @keyframes loop-infinite {
     0% {
-      transform: translateX(0px) rotateY(0deg);
-    }
-    45% {
-      transform: translateX(88vw) rotateY(0deg);
-    }
-    50% {
-      transform: translateX(88vw) rotateY(180deg);
-    }
-    95% {
-      transform: translateX(0px) rotateY(180deg);
+      transform: translateX(-20vw);
     }
     100% {
-      transform: translateX(0px) rotateY(0deg);
+      transform: translateX(+120vw);
     }
   }
 
@@ -49,9 +40,8 @@
   }
 
   #logo {
-    margin: 20px auto;
+    margin: auto;
     width: 20%;
-    transform: translate(-50%);
     min-width: 300px;
   }
 
@@ -77,7 +67,7 @@
       margin: 20px auto;
       width: 40%;
       min-width: 160px;
-      transform: translate(0%);
+      transform: translate(+20%);
     }
   }
   .togglebutton {
