--- a/frontend/src/styles/_burger.scss
+++ b/frontend/src/styles/_burger.scss
@@ -6,10 +6,13 @@
   display: flex;
   flex-direction: column;
 }
-.pokeball-menu-top,
-.pokeball-menu-bottom {
-  width: 6rem;
-  height: 3rem;
+
+.pokeball-menu {
+  width: 5rem;
+  height: 5rem;
+  margin-right: 20px;
+  left: 92%;
+  top: 30px;
 }
 
 #navBar {
@@ -75,5 +78,12 @@
     animation: slideMenuDown 1s;
     top: 100px;
     right: 10%;
+  }
+
+  .pokeball-menu {
+    width: 4rem;
+    height: 4rem;
+    left: 92%;
+    top: 50px;
   }
 }
