--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -14,14 +14,14 @@
   max-height: 150px;
   min-height: 80px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 3rem;
 
   #pika {
     height: 18vh;
     z-index: -1;
     position: relative;
-    margin-top:20px;
+    margin-top: 20px;
     animation: flip-translate 15s ease-in-out infinite;
   }
 
@@ -43,15 +43,9 @@
     }
   }
 
-  #pokeball {
-    margin-right: 50px;
-    width: 5rem;
-  }
-
   #logo {
     margin: 20px auto;
     width: 20%;
-    transform: translate(-50%);
     min-width: 300px;
   }
 
@@ -66,18 +60,11 @@
       animation: none;
       display: none;
     }
-    #pokeball {
-      margin-right: 15px;
-      width: 2.6rem;
-      display: none;
-      position: absolute;
-    }
 
     #logo {
       margin: 20px auto;
       width: 40%;
       min-width: 160px;
-      transform: translate(0%);
     }
   }
   .togglebutton {
