--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -18,7 +18,7 @@
   margin-bottom: 3rem;
 
   #pika {
-    height: 18vh;
+    width: 12vw;
     z-index: -1;
     position: relative;
     margin-top: 20px;
