--- a/frontend/src/styles/Comparator/_previewComparator.scss
+++ b/frontend/src/styles/Comparator/_previewComparator.scss
@@ -4,8 +4,6 @@
   justify-content: center;
   font-size: clamp(0.8rem, 1vw, 1.2rem);
 
-
-
   .preview {
     width: 90%;
     border: 2px solid black;
@@ -49,7 +47,6 @@
 
     .table-img {
       width: 18%;
-
     }
 
     .sprites-comparator {
@@ -121,18 +118,14 @@
 }
 
 .grey {
-  color: #EFEEEE;
+  color: #efeeee;
 }
-
 
 @media screen and (max-width: 820px) {
   .preview {
     margin-top: 20%;
   }
   .table-img {
-  
     width: 20% !important;
-    
   }
-
 }
