--- a/frontend/src/styles/_header.scss
+++ b/frontend/src/styles/_header.scss
@@ -1,7 +1,7 @@
 .header-wallpaper {
   position: absolute;
   z-index: -2;
-  width: 100vw;
+  width: 100%;
   height: 25vh;
   background-image: url(../assets/images/landscapeheader.jpg);
   background-position: 5% 63%;
@@ -27,10 +27,10 @@
 
   @keyframes loop-infinite {
     0% {
-      transform: translateX(-20vw);
+      transform: translateX(-10vw);
     }
     100% {
-      transform: translateX(+120vw);
+      transform: translateX(+100vw);
     }
   }
 
